--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>in this world there are people full of artificial life</p>
     <img src="sunflower.jpg" alt="">
+    <h3>i can write a blog</h3>
 </body>
 </html>
